--- a/okaymoneyapp/sass/global.sass
+++ b/okaymoneyapp/sass/global.sass
@@ -1,4 +1,17 @@
+@use "buttons"
+@use "error"
+
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap&subset=cyrillic')
 
 *
     font-family: Roboto, sans-serif
+    box-sizing: border-box
+
+body
+    margin: 0
+    min-height: 100vh
+    display: flex
+    flex-direction: column
+
+content
+    flex-grow: 1
