--- a/okaymoneyapp/sass/error.sass
+++ b/okaymoneyapp/sass/error.sass
@@ -4,3 +4,9 @@ error
     border: 3px #ff6666 solid
     border-radius: 8px
     padding: 0.4rem
+
+    li
+        list-style-type: none
+
+    li::before
+        content: "❌ "
