--- a/okaymoneyapp/templates/okaymoneyapp/header.html
+++ b/okaymoneyapp/templates/okaymoneyapp/header.html
@@ -8,7 +8,7 @@
     <div>
         <merged-buttons>
             <a href="{% url "login" %}" class="button">Войти</a>
-            <a class="button">Зарегистрироваться</a>
+            <a href="{% url "django_registration_register" %}" class="button">Зарегистрироваться</a>
         </merged-buttons>
     </div>
 </header>
