--- a/okaymoneyapp/templates/okaymoneyapp/base_header_footer.html
+++ b/okaymoneyapp/templates/okaymoneyapp/base_header_footer.html
@@ -5,6 +5,7 @@
 
 {% block head %}
     {% css "header" %}
+    {% css "footer" %}
 {% endblock head %}
 
 {% block body %}
@@ -13,4 +14,5 @@
         {% block content %}
         {% endblock content %}
     </content>
+    {% include "okaymoneyapp/footer.html" %}
 {% endblock body %}
